--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "npm run build:src && npm run build:tests",
+    "build:src": "tsc -p tsconfig.src.json",
+    "build:tests": "tsc -p tsconfig.tests.json",
+    "dev": "tsc -p tsconfig.src.json --watch",
     "test": "node dist/test/my-mcp-server.js",
     "start": "node dist/test/my-mcp-server.js"
   },
@@ -16,6 +18,9 @@
     "@types/express": "^5.0.3",
     "@types/node": "^20.19.15",
     "@typescript-eslint/typescript-estree": "^8.44.0",
+    "pino": "^9.9.5",
+    "pino-pretty": "^13.1.1",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "dependencies": {
@@ -24,5 +29,11 @@
     "express": "^5.1.0",
     "reflect-metadata": "^0.2.2",
     "zod": "^3.25.76"
+  },
+  "imports": {
+    "#fastmcp": {
+      "development": "./src/index.ts",
+      "default": "./dist/index.js"
+    }
   }
 }
